# BeeGfsNotify

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml  cppcheck.yml  staticcheck.yml
Common/: Common.h
beegfs_notify/: BeegfsFileEventLog.cpp  BeegfsFileEventLog.h  CMakeLists.txt  Common.h  DfsEventsWatcher.cpp  DfsEventsWatcher.h  DfsNotifier.cpp  DfsNotifier.h  README.md  client_test.cpp  main.cpp
beegfs_notify_client_lib/: CMakeLists.txt  DfsEventsWatcher.cpp  DfsEventsWatcher.h  DfsProjectHandler.cpp  DfsProjectHandler.h
beegfs_notify_client_test/: CMakeLists.txt  client_test.cpp
beegfs_notify_server_lib/: BeegfsFileEventLog.cpp  BeegfsFileEventLog.h  CMakeLists.txt  Common.h  DfsNotifier.cpp  DfsNotifier.h
beegfs_notify_test/: CMakeLists.txt  main.cpp
conan/zmqpp/: conanfile.py
